adicionado biblioteca CircleImageView e realizado pequenos ajustes visuais

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,11 @@
         android:theme="@style/Theme.Colcheius">
         <activity
             android:name=".RegisterActivity"
+            android:parentActivityName=".StartActivity"
             android:exported="true" />
         <activity
             android:name=".LoginActivity"
+            android:parentActivityName=".StartActivity"
             android:exported="true" />
         <activity
             android:name=".StartActivity"
