--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Colcheius">
         <activity
-            android:name=".RegisterActivity"
-            android:parentActivityName=".StartActivity"
-            android:exported="true" />
-        <activity
-            android:name=".LoginActivity"
-            android:parentActivityName=".StartActivity"
-            android:exported="true" />
-        <activity
-            android:name=".StartActivity"
-            android:exported="true">
+            android:name=".SplashScreenActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,9 +20,19 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".RegisterActivity"
+            android:exported="true"
+            android:parentActivityName=".StartActivity" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true"
+            android:parentActivityName=".StartActivity" />
+        <activity
+            android:name=".StartActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true" />
-
     </application>
 
 </manifest>
